[tool.poetry]
name = "Tilty"
version = "0.5.3"
description = "A pluggable system to receive and transmit bluetooth events from the Tilt Hydrometer"
authors = ["Marcus Young <3vilpenguin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
click = "^7.0"
pybluez = "^0.22.0"
requests = "^2.22"
jinja2 = "^2.11.1"
influxdb = "^5.2.3"
datadog = "^0.34.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
coverage = "^4.4.2"
coveralls = "^1.11.1"
flake8 = "^3.7"
pytest = "^5.3"
pylint = "^2.4"
pytest-cov = "^2.8"
isort = "^4.3"
tox = "^3.14"
bandit = "^1.6.2"
