[tool.poetry]
name = "Tilty"
version = "0.11.1"
description = "A pluggable system to receive and transmit bluetooth events from the Tilt Hydrometer"
authors = ["Marcus Young <3vilpenguin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
urllib3 = ">=1.26.5"
click = "^7.0"
pybluez = "^0.22.0"
requests = "^2.22"
jinja2 = ">=2.11.3"
influxdb-client = "^1.12.0"
datadog = "^0.34.1"
google-api-core = "1.20.1"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
oauth2client = "^4.1.3"
prometheus_client = "^0.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
coverage = "^4.4.2"
coveralls = "^1.11.1"
flake8 = "^3.7"
pytest = "^5.3"
pylint = "^2.4"
pytest-cov = "^2.8"
isort = "^4.3"
tox = "^3.14"
bandit = "^1.6.2"
